...
    
    
    /* Three lists of all courses that user might selected
     *   Elements to be removed if the user selected
     *   The remaining in the list is whatever needs to be scheduled
     */
    var coreRemaining:[String] = ["EECS 132", "EECS 233", "EECS 281", "EECS 302", "EECS 340", "EECS 395"]
    var engrCoreRemaining:[String] = ["MATH 121", "MATH 122 or MATH 124", "MATH 223 or MATH 227", "MATH 201 or MATH 307", "CHEM 111", "ENGR 145", "PHYS 121 or PHYS 123", "PHYS 122 or PHYS 124", "ENGR 398", "ENGL 398", "First Year Seminar", "University Seminar I", "University Seminar II", "Arts & Humanity or Social Science I", "Arts & Humanity or Social Science II", "Arts & Humanity or Social Scien
    var asCoreRemaining:[String] = ["MATH 125", "MATH 126", "Department Capstone","Arts & Humanities I", "Arts & Humanities II", "Natural Sciences I", "Natural Sciences II", "Social Sciences I", "Social Sciences II", "Quantitative Reasoning", "Global & Cultural Diversity", "First Year Seminar", "University Seminar I", "University Seminar II"]
    var optimalCoursesBS:[String] = ["MATH 121",
                                    "EECS 132","CHEM 111",
        "PHYS 121 or PHYS 123",
        "First Year Seminar",
        "Arts & Humanity or Social Science I",
...
            return Int((tech?.getHowMany())!)!
        }
    }
    
    /** get all depth requirement taken by user input */
    func getDepthTaken () -> Int {
        if (depth?.getHowMany()) == ">=4" {
            return 4;
        } else {
            return Int((depth?.getHowMany())!)!
        }
    }

    
    /*
     * If the BS student completed statistics
     *  requirement, return 1 if not
     */
    func getStats() -> Int {
        if (stat?.getStatCompleted() == "Completed") {
            return 0;
        }
        return 1;
    }
    
    /*
...
     * append courses into Schedule of 5 in a line
     */
    func getSchedule() -> [[String]] {
        let graduationTerm = year?.getYear()
        var terms = 0
        var k = 0
        if (graduationTerm == "Spring 2020") {
            terms = 3
        }
        if (graduationTerm == "Fall 2020") {
            terms = 4
        }
        if (graduationTerm == "Spring 2021") {
...
